# pyorientdb_fork

./: .gitignore  .travis.yml  MANIFEST.in  OGM.md  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
docs/source/: api.rst  conf.py
pyorient/: defaults.py  orient.py  otypes.py  utils.py
pyorient/messages/: base.py  database.py
pyorientdb/: orient.py
pyorientdb/messages/: database.py
pyorientdb/ogm/: commands.py  vertex.py
tests/: __init__.py  test_Factory_and_usage.py  test_data_cluster.py  test_graph_usage.py  test_linkSet.py  test_new_Iface.py  test_ogm.py  test_orient_version.py  test_performance.py  test_raw_messages_1.py  test_raw_messages_2.py  test_raw_messages_3.py  test_record_contents.py  test_reserved_words_batch.py  test_serializations.py  test_token_auth.py  test_utf8_string.py  tests.cfg
