# Setup configuration

[metadata]
name = pyorient
version = 1.5.5
description = OrientDB Native Client Library
long_description = file: README.rst

# Author information
author = Niko Usai <mogui83@gmail.com>, Domenico Lupinetti <ostico@gmail.com>, Bruce Schultz <bschultz013@gmail.com>
author_email = bschultz013@gmail.com
maintainer = Bruce Schultz
maintainer_email = bschultz013@gmail.com

# License Information
license = Apache 2.0 License
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6

keywords =
    Graph Database
    NoSQL Database

[options]
install_requires =
    configparser


# Random options
zip_safe = false
python_requires = >=3.6
include_package_data = True

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src